# agent-orchestrator

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  security.yml  test.yml
docs/: architecture.md
docs/adr/: 001-state-machine-pattern.md  002-mock-mode-architecture.md
docs/decisions/: 001-state-machine-pattern.md  002-mock-mode-architecture.md
examples/: basic_pipeline.py  step_by_step.py
src/: __init__.py  cli.py  orchestrator.py  telemetry.py
src/agents/: analyzer.py  base.py  researcher.py  reviewer.py
src/api/: __init__.py  app.py
src/state/: __init__.py  models.py
tests/integration/: test_orchestrator.py
tests/unit/: test_agents.py  test_cli.py  test_state.py
